--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="dist/style.min.css">
+
     <title>Frontend Mentor | Easybank landing page</title>
   </head>
   <body>
@@ -286,5 +288,6 @@
         </div>
       </div>
     </footer>
+    <script src="app/js/script.js"></script>
   </body>
 </html>
