Fix link styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="dist/style.min.css">
+    <link rel="stylesheet" href="dist/style.css">
 
     <title>Frontend Mentor | Easybank landing page</title>
   </head>
